--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,5 +30,6 @@ dependencies {
     compile 'com.android.support:design:26.0.0-alpha1'
     compile 'com.android.support:cardview-v7:23.4.0'
     compile 'com.android.support:gridlayout-v7:23.4.0'
+    compile 'de.hdodenhof:circleimageview:3.1.0'
     testCompile 'junit:junit:4.12'
 }
