--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,8 @@
         </activity>
         <activity android:name=".FormularioActivity" />
         <activity android:name=".AdminActivity" />
-        <activity android:name=".InformacionActivity"></activity>
+        <activity android:name=".InformacionActivity" />
+        <activity android:name=".RecuperarActivity"></activity>
     </application>
 
 </manifest>
