--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,5 +31,15 @@ dependencies {
     compile 'com.android.support:cardview-v7:23.4.0'
     compile 'com.android.support:gridlayout-v7:23.4.0'
     compile 'de.hdodenhof:circleimageview:3.1.0'
+    compile 'com.github.skydoves:elasticviews:1.0.9'
+    compile 'com.google.firebase:firebase-auth:10.0.1'
+    compile 'com.google.firebase:firebase-database:10.0.1'
+    compile 'com.google.firebase:firebase-storage:10.0.1'
     testCompile 'junit:junit:4.12'
 }
+
+
+
+
+
+apply plugin: 'com.google.gms.google-services'
